# chat2response

./: .env.example  .gitignore  ANALYTICS.md  API_REFERENCE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  ROUTER_API_SPEC.md  ROUTER_USAGE.md  docker-compose.yml  mcp.json.example  router_aliases.json.example  routing.json.example  rust-toolchain.toml  system_prompt.json.example
.github/workflows/: publish-ghcr.yml
e2e/: mock_openai_responses.py  requirements.txt  run_official_responses_via_chat2response.py  run_proxy_with_mock_labiium.py  test_e2e_chat_compat.py  test_e2e_http.py  test_e2e_integrations.py  test_e2e_openai_client.py  tmp_run_direct_env.py
examples/: router_service.rs
python_tests/: .gitignore  EXECUTION_REPORT.md  QUICKSTART.md  chat_cli.py  probe_openai_sdk.py  pyproject.toml  router_aliases.json  run_chat_cli_e2e.sh  run_tests.sh  setup_and_test.sh  system_prompt.json  test_summary.sh  validate_api_key.sh
python_tests/docs/: RESPONSES_API_TESTING.md  TOOL_AND_VISION_TESTING.md
python_tests/mcp/: mcp.json  mock_mcp_server.py
python_tests/tests/: __init__.py  conftest.py  test_chat2response_integration.py  test_chat2response_integration.py.bak  test_routiium_integration.py  test_routiium_integration.py.bak  test_tool_calling.py
src/: analytics.rs  analytics_middleware.rs  auth.rs  conversion.rs  lib.rs  main.rs  mcp.rs  mcp_client.rs  mcp_config.rs  pricing.rs  router_client.rs  routing_config.rs  server.rs  system_prompt_config.rs  util.rs
src/models/: chat.rs  mod.rs  responses.rs
tests/: README.md  comprehensive_conversion_tests.rs  conversion_tests.rs  integration_tests.rs  reload_tests.rs  response_body_conversion_tests.rs  router_integration.rs  server_build.rs  system_prompt_tests.rs
tests/common/: router_stub.rs
tests/proxy/: bearer_modes.rs  mod.rs
